--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,3 +31,13 @@ jobs:
         env:
           JOB_CONTEXT: ${{ toJSON(job) }}
         run: echo "$JOB_CONTEXT"
+
+      - name: Unity - Request Activation File
+        id: activation
+        uses: game-ci/unity-request-activation-file@v2.0-alpha-1
+          with:
+            customImage: mobsakai/unity3d:2020.3.21f1
+      - uses: actions/upload-artifact@v2
+        with:
+          name: ${{ steps.activation.outputs.filePath }}
+          path: ${{ steps.activation.outputs.filePath }}
